Force animated wallpapers on the lockscreen to play uninterrupted by default

BUG: 460910